--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "pair-project",
+    "database": "pair-project2",
     "host": "localhost",
     "dialect": "postgres"
   },
